--- a/src/Styles/styling.css
+++ b/src/Styles/styling.css
@@ -27,8 +27,8 @@ body {
 }
 
 .card {
-    background-color: white;
-    border: 1px solid #ddd;
+    background-color: grey;
+    border: 1px solid #1c1b1b;
     border-radius: 8px;
     width: 200px;
     padding: 16px;
