--- a/src/Styles/styling.css
+++ b/src/Styles/styling.css
@@ -7,13 +7,9 @@ body {
     height: 100%;
 }
 
-.women-page {
-    text-align: center;
-    padding: 20px;
-    min-height: 100vh;
-}
 
-.men-page {
+
+.men-page, .women-page, .kids-page, .nike-page, .adidas-page, .reebok-page, .puma-page {
     text-align: center;
     padding: 20px;
     min-height: 100vh;
@@ -27,13 +23,13 @@ body {
 }
 
 .card {
-    background-color: grey;
-    border: 1px solid #1c1b1b;
+    background-color: rgb(47, 44, 44);
+    border: 1px solid #0d0c0c;
     border-radius: 8px;
     width: 200px;
     padding: 16px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    color: black;
+    color: rgb(185, 183, 183);
 }
 
 .card-image {
@@ -53,5 +49,5 @@ body {
 
 .card-price {
     font-size: 16px;
-    color: #555;
+    color: #b8b4b4;
 }
