--- a/src/Styles/styling.css
+++ b/src/Styles/styling.css
@@ -12,7 +12,7 @@ body {
 .men-page, .women-page, .kids-page, .nike-page, .adidas-page, .reebok-page, .puma-page {
     text-align: center;
     padding: 20px;
-    min-height: 100vh;
+    min-height: 87vh;
 }
 
 .card-container {
@@ -30,12 +30,16 @@ body {
     padding: 16px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     color: rgb(185, 183, 183);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card-image {
     width: 100%;
     height: auto;
     border-radius: 8px;
+    flex-shrink: 0;
 }
 
 .card-content {
@@ -50,4 +54,12 @@ body {
 .card-price {
     font-size: 16px;
     color: #b8b4b4;
+}
+
+.page-title {
+    color: #ffffff;
+    font-size: 3.5rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
 }
