--- a/src/Styles/styling.css
+++ b/src/Styles/styling.css
@@ -9,12 +9,14 @@ body {
 
 
 
-.men-page, .women-page, .kids-page, .nike-page, .adidas-page, .reebok-page, .puma-page {
+.men-page, .women-page, .kids-page, .nike-page, .adidas-page, .reebok-page, .puma-page, .about-page, .contact-page, .team-page {
     text-align: center;
     padding: 20px;
     min-height: 87vh;
 }
 
+
+/* SneakerCard component */
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -56,10 +58,85 @@ body {
     color: #b8b4b4;
 }
 
+/*h1 on top of the pages*/
 .page-title {
     color: #ffffff;
     font-size: 3.5rem;
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
+}
+
+
+/* About Us page */
+.about-page {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+}
+
+.about-page p {
+    font-size: 22px;
+    line-height: 1.6;
+    margin-bottom: 15px;
+    color: #ffffff;
+}
+
+/* Contact Us page */
+
+.contact-page {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+}
+
+.contact-page p {
+    font-size: 23px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #ffffff;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #ffffff;
+    font-size: 20px;
+}
+
+.form-group input, .form-group textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 20px;
+    border: 1px solid black;
+    border-radius: 6px;
+    box-sizing: border-box;
+}
+
+.form-group textarea {
+    resize: vertical;
+    height: 120px;
+}
+
+button[type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #84bbf7;
+    color: black;
+    border: none;
+    border-radius: 6px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+    background-color: #2987ec;
 }
